TEST_PROGRAMS/INVALID/david_zhou/invalid5.min
# leading 0 in int

var x: int;
x = 01;
print x;
